2024-01-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-maybe-open-connection): Exit remote shell
	when login fails.

2024-01-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-parse-passwd): Use `tramp-parse-passwd-group'.
	Reported by Tim Landscheidt <tim@tim-landscheidt.de>.

2024-01-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-local-host-regexp): Adapt :version.

2024-01-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-build-completion-file-name-regexp): Do not use
	`tramp-volume-letter-regexp'.  (Bug#68320)
	(tramp-completion-handle-expand-file-name): Simplify regexp.

2024-01-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-bundle-read-file-names): Check, that the
	command finishes successfully.

2024-01-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tramp.el (tramp-unknown-id-string, tramp-unknown-id-integer):
	Make it a defvar.
	(with-tramp-timeout): Adapt docstring.

2023-12-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.7.0 released.

2023-12-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-pipe-stty-settings): New defcustom.
	(tramp-sh-handle-make-process): Use it.  (Bug#62093)

2023-12-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-process):
	Use `tramp-remote-path' for setting PATH environment.

	* tramp-sh.el (tramp-get-remote-pipe-buf): New defun.
	(tramp-set-remote-path): Use it.
	(tramp-get-remote-path): Add ;;;###tramp-autoload cookie.

2023-12-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-connection-local-p): Make it
	compatible with Emacs 27.

2023-12-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-connection-local-p): New macro.

	* tramp-crypt.el (tramp-crypt-cleanup-connection):
	Bind `tramp-crypt-enabled'.

2023-12-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-directory-files)