@@ -1,3 +1,15 @@
+2024-02-04  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* tramp-sh.el (ls-lisp-use-insert-directory-program):
+	Don't declare its existence...
+	(tramp-sh-handle-insert-directory): ...test it instead.
+
+	* tramp.el (ls-lisp-dirs-first, ls-lisp-emulation)
+	(ls-lisp-ignore-case, ls-lisp-use-insert-directory-program)
+	(ls-lisp-verbosity): Move declaration...
+	(tramp-handle-insert-directory): ...to the point where we have a
+	good reason to think these variables exist.
+
 2024-01-28  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-maybe-open-connection): Exit remote shell
